<resources>
    <string name="app_name">Food</string>
    <string name="home_title">Home</string>
    <string name="live_title">Live</string>
    <string name="favorite">Yêu thích</string>
    <string name="video_title">Video</string>
    <string name="shop_bag">Đơn hàng</string>
    <string name="notification_title">Thông báo</string>
    <string name="message">Tin nhắn</string>
    <string name="user_title">Tôi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_recently">Vừa xong</string>
    <string name="text_minute_ago">phút trước</string>
    <string name="are_you_have_account">Bạn chưa có tài khoản?</string>
    <string name="your_have_account">Bạn đã có tài khoản</string>
    <string name="login_now">Đăng nhập ngay</string>
    <string name="arr_you_have_otp">Bạn không nhận được OTP?</string>
    <string name="text_hour_ago">giờ trước</string>
    <string name="text_day_ago">ngày trước</string>
    <string name="login">Đăng nhập</string>
    <string name="timeSetUp">%s phút</string>
    <string name="user_name">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="out">Thoát</string>
    <string name="register">Đăng ký</string>
    <string name="near_by">Gần tôi</string>
    <string name="sell_well">Bán chạy</string>
    <string name="evaluate">Đánh giá</string>
    <string name="delivered">Giao đến:</string>
    <string name="search">Tìm kiếm</string>
    <string name="find_location">Đang tìm vị trí .....</string>
    <string name="continue_text">Tiếp tục</string>
    <string name="success">Hoàn thành</string>
    <string name="sent_again">Gửi lại</string>
    <string name="please_enter_mail">Vui lòng nhập email hợp lệ</string>
    <string name="email_already_exits">Email đã được đăng kí. Vui lòng sử dụng email khác</string>
    <string name="login_by_otp">Đăng nhập bằng OTP</string>
    <string name="login_by_pass">Đăng nhập bằng mật khẩu</string>
    <string name="welcome_back">Chào mừng trở lại</string>
    <string name="account_locked">Tài khoản bị khóa. Hãy thử lại nó sau một thời gian.</string>
    <string name="otp_valid">Otp không hợp lệ. Vui lòng thử lại</string>
    <string name="text_confirm_otp">Bạn có chắc chắn muốn thoát</string>
    <string name="text_confirm_setPass">Còn một bước cuối để hoàn thành việc đăng kí. Bạn có chắc muốn thoát</string>
    <string name="text_confirm_setPass_login">Hoàn thành việc đăng kí tài khoản. Bạn có muốn đăng nhập luôn?</string>
    <string name="otp_expired">Otp đã quá hạn</string>
    <string name="welcome">Chào mừng</string>
    <string name="email_not_exits">Tài khoản chưa được đăng kí</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="email_and_pass_not_exits">Tài khoản hoặc mật khẩu không chính xác</string>
    <string name="cancel">Hủy</string>
    <string name="email_is_empty">Email không được để trống</string>
    <string name="pass_is_empty">Mật khẩu không được để trống</string>
    <string name="pass_is_valid">Mật khẩu phải trên 8 ký tự</string>
    <string name="Notify">Thông báo</string>
    <string name="confirm">Xác thực</string>
    <string name="agree">Đồng ý</string>
    <string name="set_password_title">Đặt mật khẩu</string>
    <string name="enter_form">Nhập thông tin của bạn để tiếp tục</string>
    <string name="enter_form_login_by_otp">Trong trường hợp bạn quên mật khẩu bạn có thể đăng nhập bằng OTP</string>
    <string name="email_un_verify">Tài khoản chưa được xác thực yêu cầu xác thực</string>
    <string name="enter_form_register">Nhập địa chỉ email của bạn để tiếp tục</string>
    <string name="content_otp_text_view">Nhập mã otp được gửi đến email &lt;b&gt;%s&lt;/b&gt; của bạn</string>
    <string name="set_password_content">Đặt mật khẩu để hoàn thành bước cuối cùng thiết lập tài khoản của bạn</string>
    <string name="your_profile">Hồ sơ của bạn</string>
    <string name="textLogout2">Bạn có chắc chắn đăng xuất không ?</string>
    <string name="logout_success">Đăng xuất thành công</string>
    <string name="title_profile">Đăng nhập để lập kế hoạch ăn uống của bạn</string>
    <string name="logout">Đăng xuất</string>
    <string name="question_help1">Các câu hỏi thường gặp</string>
    <string name="help_center">Trung tâm trợ giúp</string>
    <string name="help">Trợ giúp</string>
    <string name="info_me">Những thông tin về chúng tôi</string>
    <string name="title_info_me">Về chúng tôi</string>
    <string name="theme">Chủ đề</string>
    <string name="light">Sáng</string>
    <string name="dark">Tối</string>
    <string name="AccSetting">Tài Khoản</string>
    <string name="Settings">Cài đặt</string>
    <string name="LanguageSetting">Ngôn ngữ</string>
    <string name="LanguageSetting_text">Chọn ngôn ngữ của bạn</string>
    <string name="LanguageSetting2">Thay đổi mật khẩu của bạn</string>
    <string name="info_myself_edit">Thay đổi thông tin cá nhân của bạn</string>
    <string name="info_myself">Thông tin cá nhân</string>
    <string name="show_profile_text">Hiền thị hồ sơ</string>
    <string name="notification">Thông báo</string>
    <string name="notification_arrays_text">Hiện tại bạn chưa có thông báo nào</string>
    <string name="your_payment">Ví của bạn</string>
    <string name="textInfoTextPayment">Sử dụng ngay</string>
    <string name="ChangePassSetting">Đổi mật khẩu</string>
    <string name="location_permission_denied">Quyền vị trí bị từ chối</string>
    <string name="popular">Phổ biến</string>
    <string name="bread">Bánh truyền thống</string>
    <string name="hot_pot">Lẩu nướng</string>
    <string name="nutrition">Đồ ăn dinh dưỡng</string>
    <string name="noodle_lunch">Bún, Cơm %s</string>
    <string name="non_alcoholic_drinks">Đồ uống không cồn</string>
    <string name="milk_tea">Trà sữa</string>
    <string name="rice">Cơm</string>
    <string name="lunch">Bữa %s</string>
    <string name="see_more">Xem thêm</string>
    <string name="snacks">Đồ ăn vặt</string>
    <string name="dessert">Tráng miệng</string>
    <string name="bread_asian">Bánh á âu</string>
    <string name="vegetarian_food">Đồ chay</string>
    <string name="partner">Quán quen</string>
    <string name="noodle">Bún/Phở/Mỳ</string>
    <string name="porridge">Cháo/súp</string>
    <string name="sea_food">Đồ hải sản</string>
    <string name="all">Tất cả</string>


</resources>