<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10dp"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="@dimen/_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nearBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/near_by"
            android:textColor="@color/color_orange"
            android:textSize="@dimen/_16dp"
            android:textStyle="bold" />

        <View
            android:id="@+id/lineNumber1"
            android:layout_width="1dp"
            android:layout_height="@dimen/_12dp"
            android:layout_gravity="center"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/sell_well"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sell_well"
            android:textColor="@color/gray"
            android:textSize="@dimen/_16dp" />

        <View
            android:id="@+id/lineNumber2"
            android:layout_width="1dp"
            android:layout_height="@dimen/_12dp"
            android:layout_gravity="center"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/evaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/evaluate"
            android:textColor="@color/gray"
            android:textSize="@dimen/_16dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="@dimen/_13dp"
        android:background="@color/color_gray_C7" />

</LinearLayout>