<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".presentation.feature.fragment.user.register.SetPassFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title=""
            app:titleTextAppearance="@style/ToolbarTextAppearanceNormal" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_20dp"
        android:orientation="vertical">


        <TextView
            style="@style/TextViewHeadline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_password_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            tools:ignore="HardcodedText,SpUsage" />

        <TextView
            android:id="@+id/content"
            style="@style/TextViewBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/set_password_content"
            android:textColor="@color/color_494F67"
            android:textSize="@dimen/_15sp"
            tools:ignore="HardcodedText,SpUsage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            app:endIconMode="password_toggle"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toBottomOf="@+id/userImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/userImage"
            app:layout_constraintTop_toTopOf="@id/userImage"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/password"
                android:importantForAutofill="yes"
                android:inputType="textPassword"
                android:textAppearance="@style/TextViewSubtitle1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25dp"
                android:background="@drawable/bg_buttom"
                android:paddingVertical="13dp"
                android:text="@string/success"
                android:textAllCaps="false"
                android:textAppearance="@style/TextViewButton"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>