<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.feature.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewHeadline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome Back"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            tools:ignore="HardcodedText,SpUsage" />

        <TextView
            style="@style/TextViewBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="Please enter your login information"
            android:textColor="@color/color_494F67"
            android:textSize="@dimen/_15sp"
            tools:ignore="HardcodedText,SpUsage" />


        <TextView
            style="@style/TextViewBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sp"
            tools:ignore="HardcodedText,SpUsage" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2dp"
            android:background="@drawable/background_edit_text_true"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawableLeft="@drawable/baseline_person_24"
            android:hint="@string/user_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_14dp"
            android:textAppearance="@style/TextViewSubtitle1"
            android:textColor="@color/black"
            android:textColorHint="@color/color_DBE0E6"
            android:textSize="@dimen/_16sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/textErrorUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginTop="@dimen/_4dp"
            android:textAppearance="@style/TextViewSubtitle2"
            android:textColor="@color/color_red"
            android:textSize="@dimen/_14sp" />

        <TextView
            style="@style/TextViewBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sp"
            tools:ignore="HardcodedText,SpUsage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/edEmail">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dp"
                android:background="@drawable/background_edit_text_true"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/_14dp"
                android:textAppearance="@style/TextViewSubtitle1"
                android:textColor="@color/black"
                android:textColorHint="@color/color_DBE0E6"
                android:textSize="@dimen/_16sp"
                tools:ignore="RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textErrorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginTop="@dimen/_4dp"
            android:textAppearance="@style/TextViewSubtitle2"
            android:textColor="@color/color_red"
            android:textSize="@dimen/_14sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:background="@drawable/bg_buttom"
            android:paddingVertical="13dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textAppearance="@style/TextViewButton"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bạn chưa có tài khoản?"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/register"
                android:textColor="@color/color_orange"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>